--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <section class="chat__section">
         <div class="brand">
             <img height="40" src="/wassup.png" alt="">
-            <h1>wassup</h1>
+            <h1>Chat!</h1>
         </div>
         <div class="message__area">
             
